<resources>
    <string name="app_name">DiceRoller</string>
    <string name="greeting">Hello World!</string>
    <string name="roll_label">Roll</string>
    <string name="roll_label2">Roll</string>
    <string name="click_announce">Button clicked!</string>
    <string name="clear_label">Clear</string>
    <string name="dice_image">dice_image</string>
    <string name="dice_image2">dice_image2</string>
</resources>